# rust-matter

./: .gitignore  Cargo.toml  Chip-Test-CD-0xFFF2-0x8001.der  Dockerfile  Information.md  README.md  rustfmt.toml  test-DAC-0xFFF2-0x8001-cert.pem  test-DAC-0xFFF2-0x8001-key.pem  test-PAI-0xFFF2-cert.pem  test-PAI-0xFFF2-key.pem
.github/: FUNDING.yml
.github/workflows/: rust.yml  workflow.yml
src/: constants.rs  crypto.rs  discovery.rs  discovery_tests.rs  lib.rs  lib_old.rs  main.rs
src/crypto/: constants.rs  kdf.rs  mod.rs  s2p_test_vectors.rs  spake.rs  sspake.rs  symmetric.rs
src/crypto/kdf/: mod.rs
src/crypto/spake/: mod.rs  spake_confirmation.rs  values.rs  values_initiator.rs  values_responder.rs
src/discovery/: constants.rs  mdns.rs  mdns_service.rs  mod.rs  multicast_socket.rs
src/discovery/mdns/: impl.rs  impls.rs  mdns_structs.rs  mod.rs  multicast_socket.rs  (+3 more)
src/logging/: mod.rs
src/mdns/: constants.rs  device_information.rs  enums.rs  mdns_device_information.rs  mod.rs  multicast_socket.rs  packet.rs  packet_header.rs  service.rs
src/mrp/: mod.rs
src/network/: enums.rs  mod.rs  network_message.rs
src/rewrite/: device.rs  enums.rs  message_reception.rs  mod.rs  session.rs
src/secure/: constants.rs  enums.rs  message.rs  message_builder.rs  message_flags.rs  message_header.rs  mod.rs  security_flags.rs  session.rs
src/service/: enums.rs  matter_impls.rs  message.rs  message_builder.rs  message_extension.rs  message_flags.rs  message_header.rs  mod.rs  security_flags.rs  structs.rs
src/session/: device.rs  matter_message.rs  message_reception.rs  mod.rs  protocol_message.rs  session.rs
src/test/: constants.rs  crypto_tests.rs  discovery_tests.rs  interaction_model.rs  matter_test.rs  mod.rs  s2p_test_vectors.rs  structure.rs  test_interaction_model.rs  tlv_test.rs
src/tests/: constants.rs  crypto_tests.rs  discovery_tests.rs  matter_test.rs  mod.rs  s2p_test_vectors.rs  tlv_test.rs
src/tlv/: control.rs  element_type.rs  encodable_value.rs  impl_encodable.rs  mod.rs  tag.rs  tag_control.rs  tag_number.rs  tlv.rs
src/transport/: mod.rs
src/useful/: byte_reader.rs  mod.rs
src/utils/: bit_subset.rs  byte_encodable.rs  enums.rs  mod.rs  padding.rs
(+127 files in other folders)
