[package]
name = "matter"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p256 = { version = "0.13.2", features = ["ecdh", "ecdsa"] }
rand = "0.9.0-alpha.0"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
hkdf = "0.12.3"
ccm = "0.5.0"
aes = "0.8.4"
block-modes = "0.9.1"
ctr = "0.9.2"
pbkdf2 = "0.12.2"
crypto-bigint = "0.5.5"
num-traits = "0.2.18"
byteorder = "1.5.0"
libc = "0.2.154"
verhoeff = "1.0.0"


[dev-dependencies]
netif = "0.1.6"