[package]
name = "matter"
version = "0.0.1"
edition = "2021"

[profile.release]
opt-level = 3
# z = 1141144B
# s = 1063640B
# 3 = 994648B
# 0 = 2277000B

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# All dependencies are cryptography related.
[dependencies]
x509-cert = { version = "0.2.5", features = ["builder"] }
ecdsa = { version = "0.16.9", features = ["pkcs8"] }
spki = { version = "0.7.3", features = ["alloc"] }
signature = "2.2.0"
cms = "0.2.3"
der = "0.7.9"
sec1 = "0.7.3"
p256 = { version = "0.13.2", features = ["ecdh", "ecdsa", "ecdsa-core"] }
rand = "0.9.0-alpha.0"
sha2 = { version = "*", features = ["oid"] }
hmac = "0.12.1"
hex = "0.4.3"
hkdf = "0.12.3"
ccm = "0.5.0"
aes = "0.8.4"
pbkdf2 = "0.12.2"
crypto-bigint = "0.5.5"
byteorder = "1.5.0"
libc = "0.2.154"
verhoeff = "1.0.0"
ctr = "0.9.2"
# block-modes = "0.9.1"
